Styling av loginskärm och welcomeskärm
Bättre responsivitet

--- a/dev/welcome.html
+++ b/dev/welcome.html
@@ -20,15 +20,13 @@
 <body>
 	<div class="container fullWidth bgImg">
 		<center>
-			<div class="wrapper">
-				<div id="welcomeText">
-					<h1>Hej och välkommen till GRÖN!</h1>
-				</div>
+			<div class="topHalfWrapper">
+				<h1 id="welcomeText">Hej och välkommen till GRÖN!</h1>
 			</div>
 			<div id="welcomeDivider"></div>
 			<div class="bottomWrapper">
 				<div class="dragend-page" data-role="welcomeInstruction" id="1">
-					<h2>Här kan du välja eller skapa några intressanta miljövänliga mål som du vill ha uppnått innan veckan är slut.</h2>
+					<h2 class="welcomeInstructions">Här kan du välja eller skapa några intressanta miljövänliga mål som du vill ha uppnått innan veckan är slut.</h2>
 					<div class="navArrows">
 						<div class="next">
 							<img class="arrow" src="img/arrow.png">
@@ -36,7 +34,7 @@
 					</div>
 				</div>
 				<div class="dragend-page" data-role="welcomeInstruction" id="2">
-					<h2>Målen du väljer ska på något sätt minska ditt ekologiska fotavtryck.</h2>
+					<h2 class="welcomeInstructions">Målen du väljer ska på något sätt minska ditt ekologiska fotavtryck.</h2>
 					<div class="navArrows">
 						<div class="prev">
 							<img class="arrow" src="img/prev_arrow.png">
@@ -47,7 +45,7 @@
 					</div>
 				</div>
 				<div class="dragend-page" data-role="welcomeInstruction" id="3">
-					<h2>Det kan vara saker du vill göra, eller saker du redan gör för att förbättra miljön.</h2>
+					<h2 class="welcomeInstructions">Det kan vara saker du vill göra, eller saker du redan gör för att förbättra miljön.</h2>
 					<div class="navArrows">
 						<div class="prev">
 							<img class="arrow" src="img/prev_arrow.png">
