Changes with links and check if logged in
If a user goes back in browser history after logging out, a function
will now run to see if the cookie userID is set and give a
message+redirect user out again if he/she isn't logged in.

All <a>-elements are now gone, onclick functions added instead

--- a/dev/welcome.html
+++ b/dev/welcome.html
@@ -19,6 +19,8 @@
 		<script src="js/dragend.js"></script>
 		<script src="js/getsize.js"></script>
 		<script src="js/shiftInstructions.js"></script>
+		<script src="js/checkIfLoggedIn.js"></script>
+		<script src="js/main-controller.js"></script>
 	</head>
 <body>
 	<div class="container fullWidth bgImg">
@@ -54,9 +56,7 @@
 							<img class="arrow" src="img/prev_arrow.png">
 						</div>
 						<div class="next">
-							<a href="goals.php">
-								<p class="nextText">Gå vidare</p>
-							</a>
+							<p class="nextText" onclick="toGoals()">Gå vidare</p>
 						</div>
 					</div>
 				</div>
